--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -9383,27 +9383,25 @@ header {
   position: fixed;
   top: 50%;
   left: 50%;
+  text-align: center;
   -webkit-transform: translateX(-50%) translateY(-50%);
   -moz-transform: translateX(-50%) translateY(-50%);
   -ms-transform: translateX(-50%) translateY(-50%);
   -o-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
 }
-/* line 592, ../sass/app.scss */
+/* line 593, ../sass/app.scss */
 .loading-screen .contents svg {
   width: 60px;
   height: auto;
 }
-/* line 597, ../sass/app.scss */
+/* line 598, ../sass/app.scss */
 .loading-screen .contents .text {
   height: 20px;
-  width: 80px;
-  text-align: center;
   position: relative;
-  overflow: hidden;
   margin: 10px auto;
 }
-/* line 605, ../sass/app.scss */
+/* line 603, ../sass/app.scss */
 .loading-screen .contents .text p {
   font-size: 14px;
   padding: 0;
@@ -9412,14 +9410,14 @@ header {
   top: 50%;
   color: #524231;
   opacity: 0;
-  -webkit-transform: translateY(-50%) translate3d(0, 30px, 0);
-  -moz-transform: translateY(-50%) translate3d(0, 30px, 0);
-  -ms-transform: translateY(-50%) translate3d(0, 30px, 0);
-  -o-transform: translateY(-50%) translate3d(0, 30px, 0);
-  transform: translateY(-50%) translate3d(0, 30px, 0);
+  -webkit-transform: scale3d(0, 0, 1) perspective(200px) translateZ(0);
+  -moz-transform: scale3d(0, 0, 1) perspective(200px) translateZ(0);
+  -ms-transform: scale3d(0, 0, 1) perspective(200px) translateZ(0);
+  -o-transform: scale3d(0, 0, 1) perspective(200px) translateZ(0);
+  transform: scale3d(0, 0, 1) perspective(200px) translateZ(0);
 }
 
-/* line 620, ../sass/app.scss */
+/* line 618, ../sass/app.scss */
 footer {
   color: #71e271;
   font-size: 10px;
@@ -9427,7 +9425,7 @@ footer {
 }
 
 /* TRANSITION SPECIFIC */
-/* line 632, ../sass/app.scss */
+/* line 630, ../sass/app.scss */
 .ani-left {
   -webkit-transform: translate3d(-2000px, 0, 0);
   -moz-transform: translate3d(-2000px, 0, 0);
@@ -9437,7 +9435,7 @@ footer {
   opacity: 0;
 }
 
-/* line 637, ../sass/app.scss */
+/* line 635, ../sass/app.scss */
 .ani-right {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
@@ -9447,17 +9445,17 @@ footer {
   opacity: 1;
 }
 
-/* line 642, ../sass/app.scss */
+/* line 640, ../sass/app.scss */
 .ani-fadeOut {
   opacity: 0;
 }
 
-/* line 646, ../sass/app.scss */
+/* line 644, ../sass/app.scss */
 .ani-fadeIn {
   opacity: 1;
 }
 
-/* line 650, ../sass/app.scss */
+/* line 648, ../sass/app.scss */
 .ani-fadeOutZindex {
   opacity: 0;
   z-index: -1;
@@ -9468,7 +9466,7 @@ footer {
   animation: zoomAniNoRotateRev 0.3s forwards;
 }
 
-/* line 656, ../sass/app.scss */
+/* line 654, ../sass/app.scss */
 .ani-fadeInZindex {
   opacity: 1;
   z-index: 1;
@@ -9480,7 +9478,7 @@ footer {
 }
 
 /* ANIMATION SPECIFIC */
-/* line 668, ../sass/app.scss */
+/* line 666, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.8s forwards;
   -moz-animation: zoomAni 0.8s forwards;
@@ -9489,7 +9487,7 @@ footer {
   animation: zoomAni 0.8s forwards;
 }
 
-/* line 672, ../sass/app.scss */
+/* line 670, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9498,7 +9496,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 676, ../sass/app.scss */
+/* line 674, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9507,7 +9505,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 680, ../sass/app.scss */
+/* line 678, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9516,7 +9514,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 684, ../sass/app.scss */
+/* line 682, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
@@ -9525,7 +9523,7 @@ footer {
   animation: slideAni 0.5s forwards;
 }
 
-/* line 688, ../sass/app.scss */
+/* line 686, ../sass/app.scss */
 .number-zoom {
   -webkit-animation: numberZoomAni 1s forwards;
   -moz-animation: numberZoomAni 1s forwards;
@@ -9538,7 +9536,7 @@ footer {
   animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
-/* line 696, ../sass/app.scss */
+/* line 694, ../sass/app.scss */
 .fade-in-and-up {
   -webkit-animation: fadeInAndUp 1s forwards;
   -moz-animation: fadeInAndUp 1s forwards;
@@ -9547,7 +9545,7 @@ footer {
   animation: fadeInAndUp 1s forwards;
 }
 
-/* line 700, ../sass/app.scss */
+/* line 698, ../sass/app.scss */
 .li-click {
   -webkit-animation: liButtonClick 0.5s forwards;
   -moz-animation: liButtonClick 0.5s forwards;
@@ -9560,7 +9558,7 @@ footer {
   transform: perspective(200px) translateZ(0);
 }
 
-/* line 708, ../sass/app.scss */
+/* line 706, ../sass/app.scss */
 .li-click-text {
   -webkit-animation: liButtonClickText 1s forwards;
   -moz-animation: liButtonClickText 1s forwards;
@@ -9577,7 +9575,7 @@ footer {
   transform: perspective(200px) translateZ(0);
 }
 
-/* line 720, ../sass/app.scss */
+/* line 718, ../sass/app.scss */
 .top-leaf {
   fill: #71E271;
   -webkit-animation: colorSwapToBrightGreen 0.5s infinite;
@@ -9587,7 +9585,7 @@ footer {
   animation: colorSwapToBrightGreen 0.5s infinite;
 }
 
-/* line 725, ../sass/app.scss */
+/* line 723, ../sass/app.scss */
 .bottom-leaf {
   fill: #00CA3E;
   -webkit-animation: colorSwapToDarkGreen 0.5s infinite;
@@ -9597,7 +9595,7 @@ footer {
   animation: colorSwapToDarkGreen 0.5s infinite;
 }
 
-/* line 730, ../sass/app.scss */
+/* line 728, ../sass/app.scss */
 .loading-text {
   -webkit-animation: loadingText 1.2s infinite;
   -moz-animation: loadingText 1.2s infinite;
@@ -9614,105 +9612,73 @@ footer {
 @keyframes loadingText {
   0% {
     opacity: 0;
-    transform: translateY(-50%) translate3d(0, 30px, 0);
+    transform: scale3d(0, 0, 1);
   }
   25% {
-    opacity: .9;
-    transform: translateY(-50%) translate3d(0, 0, 0);
-  }
-  50% {
-    opacity: .9;
-    transform: translateY(-50%) translate3d(0, 0, 0);
+    opacity: 1;
+    transform: scale3d(1, 1, 1);
   }
   75% {
-    opacity: .5;
-    transform: translateY(-50%) translate3d(0, 0, 0);
-  }
-  99% {
-    opacity: 0;
-    transform: translateY(-50%) translate3d(0, -30px, 0);
+    opacity: 1;
+    transform: scale3d(1, 1, 1);
   }
   100% {
     opacity: 0;
-    transform: translateY(-50%) translate3d(0, 30px, 0);
+    transform: scale3d(1.2, 1.2, 1);
   }
 }
 @-webkit-keyframes loadingText {
   0% {
     opacity: 0;
-    -webkit-transform: translateY(-50%) translate3d(0, 30px, 0);
+    -webkit-transform: scale3d(0, 0, 1);
   }
   25% {
-    opacity: .9;
-    -webkit-transform: translateY(-50%) translate3d(0, 0, 0);
-  }
-  50% {
-    opacity: .9;
-    -webkit-transform: translateY(-50%) translate3d(0, 0, 0);
+    opacity: 1;
+    -webkit-transform: scale3d(1, 1, 1);
   }
   75% {
-    opacity: .5;
-    -webkit-transform: translateY(-50%) translate3d(0, 0, 0);
-  }
-  99% {
-    opacity: 0;
-    -webkit-transform: translateY(-50%) translate3d(0, -30px, 0);
+    opacity: 1;
+    -webkit-transform: scale3d(1, 1, 1);
   }
   100% {
     opacity: 0;
-    -webkit-transform: translateY(-50%) translate3d(0, 30px, 0);
+    -webkit-transform: scale3d(1.2, 1.2, 1);
   }
 }
 @-moz-keyframes loadingText {
   0% {
     opacity: 0;
-    -moz-transform: translateY(-50%) translate3d(0, 30px, 0);
+    -moz-transform: scale3d(0, 0, 1);
   }
   25% {
-    opacity: .9;
-    -moz-transform: translateY(-50%) translate3d(0, 0, 0);
-  }
-  50% {
-    opacity: .9;
-    -moz-transform: translateY(-50%) translate3d(0, 0, 0);
+    opacity: 1;
+    -moz-transform: scale3d(1, 1, 1);
   }
   75% {
-    opacity: .5;
-    -moz-transform: translateY(-50%) translate3d(0, 0, 0);
-  }
-  99% {
-    opacity: 0;
-    -moz-transform: translateY(-50%) translate3d(0, -30px, 0);
+    opacity: 1;
+    -moz-transform: scale3d(1, 1, 1);
   }
   100% {
     opacity: 0;
-    -moz-transform: translateY(-50%) translate3d(0, 30px, 0);
+    -moz-transform: scale3d(1.2, 1.2, 1);
   }
 }
 @-o-keyframes loadingText {
   0% {
     opacity: 0;
-    -o-transform: translateY(-50%) translate3d(0, 30px, 0);
+    -o-transform: scale3d(0, 0, 1);
   }
   25% {
-    opacity: .9;
-    -o-transform: translateY(-50%) translate3d(0, 0, 0);
-  }
-  50% {
-    opacity: .9;
-    -o-transform: translateY(-50%) translate3d(0, 0, 0);
+    opacity: 1;
+    -o-transform: scale3d(1, 1, 1);
   }
   75% {
-    opacity: .5;
-    -o-transform: translateY(-50%) translate3d(0, 0, 0);
-  }
-  99% {
-    opacity: 0;
-    -o-transform: translateY(-50%) translate3d(0, -30px, 0);
+    opacity: 1;
+    -o-transform: scale3d(1, 1, 1);
   }
   100% {
     opacity: 0;
-    -o-transform: translateY(-50%) translate3d(0, 30px, 0);
+    -o-transform: scale3d(1.2, 1.2, 1);
   }
 }
 @keyframes liButtonClick {
