--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -9410,14 +9410,9 @@ header {
   top: 50%;
   color: #524231;
   opacity: 0;
-  -webkit-transform: scale3d(0, 0, 1) perspective(200px) translateZ(0);
-  -moz-transform: scale3d(0, 0, 1) perspective(200px) translateZ(0);
-  -ms-transform: scale3d(0, 0, 1) perspective(200px) translateZ(0);
-  -o-transform: scale3d(0, 0, 1) perspective(200px) translateZ(0);
-  transform: scale3d(0, 0, 1) perspective(200px) translateZ(0);
 }
 
-/* line 618, ../sass/app.scss */
+/* line 617, ../sass/app.scss */
 footer {
   color: #71e271;
   font-size: 10px;
@@ -9425,7 +9420,7 @@ footer {
 }
 
 /* TRANSITION SPECIFIC */
-/* line 630, ../sass/app.scss */
+/* line 629, ../sass/app.scss */
 .ani-left {
   -webkit-transform: translate3d(-2000px, 0, 0);
   -moz-transform: translate3d(-2000px, 0, 0);
@@ -9435,7 +9430,7 @@ footer {
   opacity: 0;
 }
 
-/* line 635, ../sass/app.scss */
+/* line 634, ../sass/app.scss */
 .ani-right {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
@@ -9445,17 +9440,17 @@ footer {
   opacity: 1;
 }
 
-/* line 640, ../sass/app.scss */
+/* line 639, ../sass/app.scss */
 .ani-fadeOut {
   opacity: 0;
 }
 
-/* line 644, ../sass/app.scss */
+/* line 643, ../sass/app.scss */
 .ani-fadeIn {
   opacity: 1;
 }
 
-/* line 648, ../sass/app.scss */
+/* line 647, ../sass/app.scss */
 .ani-fadeOutZindex {
   opacity: 0;
   z-index: -1;
@@ -9466,7 +9461,7 @@ footer {
   animation: zoomAniNoRotateRev 0.3s forwards;
 }
 
-/* line 654, ../sass/app.scss */
+/* line 653, ../sass/app.scss */
 .ani-fadeInZindex {
   opacity: 1;
   z-index: 1;
@@ -9478,7 +9473,7 @@ footer {
 }
 
 /* ANIMATION SPECIFIC */
-/* line 666, ../sass/app.scss */
+/* line 665, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.8s forwards;
   -moz-animation: zoomAni 0.8s forwards;
@@ -9487,7 +9482,7 @@ footer {
   animation: zoomAni 0.8s forwards;
 }
 
-/* line 670, ../sass/app.scss */
+/* line 669, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9496,7 +9491,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 674, ../sass/app.scss */
+/* line 673, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9505,7 +9500,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 678, ../sass/app.scss */
+/* line 677, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9514,7 +9509,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 682, ../sass/app.scss */
+/* line 681, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
@@ -9523,7 +9518,7 @@ footer {
   animation: slideAni 0.5s forwards;
 }
 
-/* line 686, ../sass/app.scss */
+/* line 685, ../sass/app.scss */
 .number-zoom {
   -webkit-animation: numberZoomAni 1s forwards;
   -moz-animation: numberZoomAni 1s forwards;
@@ -9536,7 +9531,7 @@ footer {
   animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
-/* line 694, ../sass/app.scss */
+/* line 693, ../sass/app.scss */
 .fade-in-and-up {
   -webkit-animation: fadeInAndUp 1s forwards;
   -moz-animation: fadeInAndUp 1s forwards;
@@ -9545,7 +9540,7 @@ footer {
   animation: fadeInAndUp 1s forwards;
 }
 
-/* line 698, ../sass/app.scss */
+/* line 697, ../sass/app.scss */
 .li-click {
   -webkit-animation: liButtonClick 0.5s forwards;
   -moz-animation: liButtonClick 0.5s forwards;
@@ -9558,7 +9553,7 @@ footer {
   transform: perspective(200px) translateZ(0);
 }
 
-/* line 706, ../sass/app.scss */
+/* line 705, ../sass/app.scss */
 .li-click-text {
   -webkit-animation: liButtonClickText 1s forwards;
   -moz-animation: liButtonClickText 1s forwards;
@@ -9575,7 +9570,7 @@ footer {
   transform: perspective(200px) translateZ(0);
 }
 
-/* line 718, ../sass/app.scss */
+/* line 717, ../sass/app.scss */
 .top-leaf {
   fill: #71E271;
   -webkit-animation: colorSwapToBrightGreen 0.5s infinite;
@@ -9585,7 +9580,7 @@ footer {
   animation: colorSwapToBrightGreen 0.5s infinite;
 }
 
-/* line 723, ../sass/app.scss */
+/* line 722, ../sass/app.scss */
 .bottom-leaf {
   fill: #00CA3E;
   -webkit-animation: colorSwapToDarkGreen 0.5s infinite;
@@ -9595,90 +9590,25 @@ footer {
   animation: colorSwapToDarkGreen 0.5s infinite;
 }
 
-/* line 728, ../sass/app.scss */
+/* line 727, ../sass/app.scss */
 .loading-text {
-  -webkit-animation: loadingText 1.2s infinite;
-  -moz-animation: loadingText 1.2s infinite;
-  -ms-animation: loadingText 1.2s infinite;
-  -o-animation: loadingText 1.2s infinite;
-  animation: loadingText 1.2s infinite;
-  -webkit-animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
-  -moz-animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
-  -o-animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
-  animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
+  -webkit-animation: loadingText 0.9s infinite;
+  -moz-animation: loadingText 0.9s infinite;
+  -ms-animation: loadingText 0.9s infinite;
+  -o-animation: loadingText 0.9s infinite;
+  animation: loadingText 0.9s infinite;
 }
 
 /* KEY FRAMES */
 @keyframes loadingText {
   0% {
-    opacity: 0;
-    transform: scale3d(0, 0, 1);
+    opacity: .7;
   }
-  25% {
+  50% {
     opacity: 1;
-    transform: scale3d(1, 1, 1);
-  }
-  75% {
-    opacity: 1;
-    transform: scale3d(1, 1, 1);
   }
   100% {
-    opacity: 0;
-    transform: scale3d(1.2, 1.2, 1);
-  }
-}
-@-webkit-keyframes loadingText {
-  0% {
-    opacity: 0;
-    -webkit-transform: scale3d(0, 0, 1);
-  }
-  25% {
-    opacity: 1;
-    -webkit-transform: scale3d(1, 1, 1);
-  }
-  75% {
-    opacity: 1;
-    -webkit-transform: scale3d(1, 1, 1);
-  }
-  100% {
-    opacity: 0;
-    -webkit-transform: scale3d(1.2, 1.2, 1);
-  }
-}
-@-moz-keyframes loadingText {
-  0% {
-    opacity: 0;
-    -moz-transform: scale3d(0, 0, 1);
-  }
-  25% {
-    opacity: 1;
-    -moz-transform: scale3d(1, 1, 1);
-  }
-  75% {
-    opacity: 1;
-    -moz-transform: scale3d(1, 1, 1);
-  }
-  100% {
-    opacity: 0;
-    -moz-transform: scale3d(1.2, 1.2, 1);
-  }
-}
-@-o-keyframes loadingText {
-  0% {
-    opacity: 0;
-    -o-transform: scale3d(0, 0, 1);
-  }
-  25% {
-    opacity: 1;
-    -o-transform: scale3d(1, 1, 1);
-  }
-  75% {
-    opacity: 1;
-    -o-transform: scale3d(1, 1, 1);
-  }
-  100% {
-    opacity: 0;
-    -o-transform: scale3d(1.2, 1.2, 1);
+    opacity: .7;
   }
 }
 @keyframes liButtonClick {
