--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -129,6 +129,8 @@ body {
 
 #park-info-name {
 	font-size: 20px;
+	margin: 10px 0;
+	color: $light-main;
 }
 
 
@@ -413,7 +415,7 @@ header {
 			height: 75px;
 			width: 75px;
 			border: 6px solid $dark-main;
-			margin: 0;
+			margin: 0 1px;
 			font-size: 0;
 			vertical-align: middle;
 			text-align: center;
@@ -461,8 +463,9 @@ header {
 }
 
 .park-info-cont {
-	padding: 0;
+	padding: 15px 25px;
 	margin: 0;
+	color: $btn-text;
 
 	li {
 		display: block;
