--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -652,6 +652,12 @@ header {
 	}
 }
 
+.fa-styling {
+	color: $dark-main;
+	width: 16px;
+	text-align: center;
+}
+
 footer {
 	color    : $dark-main;
 	font-size: 10px;
